src/test/ui/borrowck/borrowck-loan-blocks-mut-uniq.stderr
error[E0502]: cannot borrow `v` as mutable because `*v` is also borrowed as immutable
  --> $DIR/borrowck-loan-blocks-mut-uniq.rs:10:12
   |
LL |     borrow(&*v,
   |             -- immutable borrow occurs here
LL |            |w| { //~ ERROR cannot borrow `v` as mutable
   |            ^^^ mutable borrow occurs here
LL |             v = box 4;
   |             - borrow occurs due to use of `v` in closure
...
LL |         })
   |          - immutable borrow ends here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
